--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,8 @@ runs:
       run: |
         IFS=';' read -ra FILE_ARRAY <<< "$files"
         for file in "${FILE_ARRAY[@]}"; do
-        rm -rf .//$file
+          rm -rf .//$file
+        done
       shell: bash
 
     - name: LS
